--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,11 @@
     padding: 0;
     margin: 0;
 }
+
+#myGameCanvas {
+    width: 480;
+    height: 320px;
+    background-color: thistle;
+    display: block;
+    margin: 0 auto;
+}
